# pmgr

./: .gitignore  Cargo.toml  README.md
docs/: tasks.md  usage.md
src/: lib.rs  main.rs
src/commands/: add.rs  check.rs  create.rs  delete.rs  deselect.rs  info.rs  init.rs  list.rs  mod.rs  read.rs  remove.rs  select.rs  set.rs  task.rs  unwatch.rs  watch.rs
src/data/: mod.rs
src/utils/: functions.rs  macros.rs  mod.rs
tests/: add.rs  check.rs  core_features.rs  create.rs  delete.rs  init.rs  remove.rs  task.rs  watch.rs
tests/common/: mod.rs
