[package]
name = "pmgr"
description = "A cli-based project management tool."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/recleun/pmgr"
keywords = ["project-management", "cli"]
categories = ["command-line-utilities"]
version = "0.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.19", features = ["derive"] }
clap_complete = "4.5.33"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
url = "2.5.2"
